add basic css grid design +html for the game

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+    <div id="container">
+        <div id="upper">
+            timeplace
+        </div>
+        <div id="Gamezone">
+            game place
+        </div>
+        <div id="buttom">
+           <div id="">Frogs Left</div>
+           <div id="">Catch The Frogs</div>
+           <div>Level</div>
+        </div>
+    </div>
     <script src="Jquery.js"></script> 
     <script src="render.js"></script> <!-- You'll create this soon -->
     <script src="logic.js"></script> <!-- You've got this -->
