--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Tweeter</title>
     <link href="https://fonts.googleapis.com/css?family=Balthazar" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
 <body>
@@ -14,14 +16,15 @@
             timeplace
         </div>
         <div id="Gamezone">
-            game place
+            
         </div>
         <div id="buttom">
            <div id="">Frogs Left</div>
            <div id="">Catch The Frogs</div>
-           <div>Level</div>
+           <div id="">Level</div>
         </div>
     </div>
+    
     <script src="Jquery.js"></script> 
     <script src="render.js"></script> <!-- You'll create this soon -->
     <script src="logic.js"></script> <!-- You've got this -->
